--- a/priv/admin/js/templates/cluster.hbs
+++ b/priv/admin/js/templates/cluster.hbs
@@ -34,155 +34,58 @@
         {{/if}}
     </div><!-- #add-node -->
 
+
     <div id="current-area">
         <h2 class="gui-headline">
             Current Cluster
-            <span id="total-number" class="gui-text"></span><br/>
+            <span id="total-number" class="gui-text-flat italic"></span><br/>
         </h2>
-        <span class="gui-text-flat italic">Click the "Stage" button next to all nodes you wish to change.</span>
-        <div id="node-list" class="hide">
-            <table class="list-table" id="cluster-table">
-                <tr class="table-head has-cut">
-                    <td><h4 class="gui-headline-bold">Stage</h4></td>
-                    <td><h4 class="gui-headline-bold">Name &amp; Status</h4></td>
-                    <td><h4 class="gui-headline-bold actions-header">Actions</h4></td>
-                    <td><h4 class="gui-headline-bold">Partitions</h4></td>
-                    <td><h4 class="gui-headline-bold">RAM Use</h4></td>
-                </tr>
-            </table>
-        </div>
-        <div class="spinner-box">
-            <img id="cluster-spinner" class="spinner" src="/admin/ui/images/spinner.gif">
-        </div>
-    </div>
-
-    <div id="planned-area">
-        <h2 class="gui-headline">
-            Planned Cluster
-        </h2>
-        <span class="gui-text-flat italic">This is how your cluster will look after convergence.</span>
-        <div id="planned-list" class="">
-            <table id="planned-table">
-                <tr class="table-head has-cut">
-                    <td><h4 class="gui-headline-bold">Name &amp; Status</h4></td>
-                    <td><h4 class="gui-headline-bold">Partitions</h4></td>
-                    <td><h4 class="gui-headline-bold">Replacing</h4></td>
-                </tr>
-                <tr>
-                    <td class="name-box gui-text">
-                        <a class="gui-light status-light inline-block">
-                        </a><div class="gui-text field-container inline-block">
-                            <div class="name gui-field">dev1@127.0.0.1</div>
-                        </div>
-                    </td>
-                    <td class="gui-text ring_pct-box">
-                        <div class="left pct-arrows pct-static">
-                            <div class="green-pct-arrow"></div>
-                        </div>
-                        <div class="left gui-text pct-box">
-                            <div class="i-block ring_pct">19%</div>
-                        </div>
-                        <div class="clear"></div>
-                    </td>
-                    <td class="replacing-box">
-                        <div class="gui-text field-container inline-block">
-                            <div class="name gui-field">dev1@127.0.0.1</div>
-                        </div>
-                    </td>
-                </tr>
-            </table>
-        </div>
-        <h4 class="plan-details-header gui-headline-bold">Plan Details</h4>
-        <p class="plan-details">
-            More details about the convergence plan will go here.
-            Lorem ipsum dolor sit amet consecteteur adipiscing
-            elit.  Caronius mun liltium norvis.
-        </p>
-        <div class="accept-plan">
-            <div class="gui-checkbox-wrapper">
-                <span>This plan is correct.</span>
-                <input class="gui-checkbox" type="checkbox" name="cluster-plan" value="accept"/>
-            </div>
-            <a id="commit-button" class="gui-point-button-right gui-text-bold right">
-                <span class="gui-button-msg">COMMIT</span>
-            </a>
-        </div>
-    </div>
-
-    <div class="clear"></div>
-
-    <!-- node template -->
-    <table class="hide">
-        <tr class="node row-template">
-            <td class="stage-box gui-text">
-                <a class="stage-button"></a>
-            </td>
-            <td class="name-box gui-text">
-                <a class="gui-light status-light inline-block">
-                </a><div class="gui-text field-container inline-block">
-                    <div class="name gui-field"></div>
+        <section id="node-list">
+            <ul class="list-header">
+                <li class="item1"><h4 class="gui-headline-bold">Actions</h4></li>
+                <li class="item2"><h4 class="gui-headline-bold">Name &amp; Status</h4></li>
+                <li class="item3"><h4 class="gui-headline-bold">Partitions</h4></li>
+                <li class="item4"><h4 class="gui-headline-bold">RAM Usage</h4></li>
+            </ul>
+            <div class="clear"></div>
+            <div class="node">
+                <div class="item1 toggle-container">
+                    <div class="actions-toggle gui-field">
+                        <a class="slider"></a>
+                    </div>
                 </div>
-            </td>
-            <!-- New switch template -->
-            <td class="switch-box off">
-                <div class="gui-switch-container">
-                    <div class="gui-switch off"></div>
+                <div class="item2 name-box gui-text">
+                    <a class="gui-light status-light inline-block">
+                    </a><div class="gui-text field-container inline-block">
+                        <div class="name gui-field">dev1@127.0.0.1</div>
+                    </div>
                 </div>
-            </td>
-            <td class="gui-text ring_pct-box">
-                <div class="left pct-arrows pct-static">
-                    <div class="green-pct-arrow"></div>
+                <div class="item3 gui-text ring-pct-box">
+                    <div class="left pct-arrows pct-static">
+                        <div class="green-pct-arrow"></div>
+                    </div>
+                    <div class="left gui-text pct-box">
+                        <span class="ring-pct">25%</span>
+                    </div>
+                    <div class="clear"></div>
                 </div>
-                <div class="left gui-text pct-box">
-                    <div class="i-block ring_pct"></div>
+                <div class="item4 gui-text memory-box">
+                    <div class="membar-bg">
+                        <div class="mem-colors">
+                            <div class="erlang-mem mem-color" name=""></div>
+                            <div class="non-erlang-mem mem-color" name=""></div>
+                            <div class="unknown-mem"></div>
+                        </div>
+                        <div class="membar-fg"></div>
+                    </div>
+                    <span class="used-memory">43%</span>
                 </div>
-            {{else}}
-                <ul class="list-header">
-                    <li class="item1"><h4 class="gui-headline-bold">Actions</h4></li>
-                    <li class="item2"><h4 class="gui-headline-bold">Name &amp; Status</h4></li>
-                    <li class="item3"><h4 class="gui-headline-bold">Partitions</h4></li>
-                    <li class="item4"><h4 class="gui-headline-bold">RAM Usage</h4></li>
-                </ul>
                 <div class="clear"></div>
-            </td>
-            <td class="gui-text memory-box">
-                <div class="membar-bg">
-                    <div class="mem-colors">
-                        <div class="erlang-mem mem-color" name=""></div>
-                        <div class="non-erlang-mem mem-color" name=""></div>
-                        <div class="unknown-mem"></div>
-                    </div>
-                    <div class="membar-fg"></div>
-                </div>
-                <span class="free-memory"></span>
-            </td>
-        </tr>
-        <tr class="more-node-actions more-actions-template">
-            <td>&nbsp;</td>
-            <td colspan="2" class="more-actions-td">
-                <div class="actions-box gui-text">
-                    <div class="markdown-box left">
-                        <a class="markdown-button action-button pressed disabled">
-                            <span class="action-icon"></span>
-                        </a>
-                        <span class="markdown-label block disabled">Down</span>
-                        <div class="clear"></div>
-                    </div>
-                    <div class="shutdown-box left">
-                        <a class="shutdown-button action-button">
-                            <span class="action-icon"></span>
-                        </a>
-                        <span class="shutdown-label block">Stop</span>
-                        <div class="clear"></div>
-                    </div>
-                    <div class="leave-cluster-box left">
-                        <a class="leave-cluster-button action-button">
-                            <span class="action-icon"></span>
-                        </a>
-                        <span class="leave-cluster-label block">Leave</span>
-                        <div class="clear"></div>
-                    </div>
-                    <!-- These are the dropdown and checkboxes for the new management protocol -->
+            </div><!-- .node -->
+            <div class="actions-container">
+                <div class="actions-pointer"></div>
+                <div class="actions-box">
+                    <span class="gui-text-flat serif">Use these actions to prepare this node to leave the cluster.</span>
                     <div class="replacement-controls">
                         <div class="gui-dropdown-wrapper replacement-node-dropdown">
                             <div class="gui-dropdown-bg gui-text">Replacement Node</div>
@@ -202,53 +105,81 @@
                             <span>Force Replace</span>
                         </div>
                     </div>
+                    <div class="clear"></div>
+                    <a class="stage-button gui-point-button-right gui-text-bold right">
+                        <span class="gui-button-msg">STAGE LEAVE</span>
+                    </a>
+                </div>
+            </div><!-- .actions-box -->
+        </section>
+        <div class="spinner-box">
+            <img id="cluster-spinner" class="spinner" src="/admin/ui/images/spinner.gif">
+        </div>
+    </div>
 
+
+    <div id="area-separator">
+        <div class="vert-line"></div>
+    </div>
+
+
+    <div id="planned-area">
+        <h2 class="gui-headline">
+            Cluster Plan
+            <span class="gui-text-flat italic">(Your new cluster after convergence.)</span>
+        </h2>
+        <section id="planned-list" class="">
+            <ul class="list-header">
+                <li class="item1"><h4 class="gui-headline-bold">Name &amp; Status</h4></li>
+                <li class="item2"><h4 class="gui-headline-bold">Partitions</h4></li>
+                <li class="item3"><h4 class="gui-headline-bold">Action</h4></li>
+                <li class="item4"><h4 class="gui-headline-bold">Replacing</h4></li>
+            </ul>
+            <div class="clear"></div>
+            <div class="node">
+                <div class="item1 name-box gui-text">
+                    <a class="gui-light status-light inline-block">
+                    </a><div class="gui-text field-container inline-block">
+                        <div class="name gui-field">dev1@127.0.0.1</div>
+                    </div>
+                </div>
+                <div class="item2 gui-text ring-pct-box">
+                    <div class="left pct-arrows pct-static">
+                        <div class="green-pct-arrow"></div>
+                    </div>
+                    <div class="left gui-text pct-box">
+                        <span class="ring-pct">25%</span>
+                    </div>
                     <div class="clear"></div>
                 </div>
-                <div class="clear"></div>
-                {{collection RiakControl.StagedClusterView contentBinding="activeStagedCluster"}}
-            </section>
-            <div class="accept-plan">
-                <div class="gui-checkbox-wrapper">
-                    <label for="confirmed-check">This plan is correct.</label>
-                    <input class="gui-checkbox" type="checkbox" name="confirmed" id="confirmed-check" value="accept"/>
-                  </div>
-                <a id="commit-button" class="gui-point-button-right gui-text-bold right" {{action commitPlan target="controller"}}>
-                    <span class="gui-button-msg">COMMIT</span>
-                </a>
-            </div>
-            <div class="clear-plan-box">
-                <span class="gui-text-flat serif">
-                    Changed your mind? Click this button to remove all staged changes.
-                </span>
-                <a class="gui-rect-button gui-text-bold" {{action clearPlan target="controller"}}>
-                    <span class="gui-button-msg">CLEAR PLAN</span>
-                </a>
-            </div>
-        {{else}}
-            <section id="planned-list">
-                <div class="spinner-box">
-                    {{#if controller.ringNotReady}}
-                        <h4 class="gui-headline-bold">
-                            Cannot plan until cluster state has converged. Check "Ring Ready" in "riak-admin ring_status".
-                        </h4>
-                    {{else}}
-                        {{#if controller.legacyRing}}
-                            <h4 class="gui-headline-bold">You are currently running a legacy version of Riak that does not support staged changes.</h4>
-                        {{else}}
-                            {{#if controller.emptyPlan}}
-                                <h4 class="gui-headline-bold">Currently no staged changes to display.</h4>
-                            {{else}}
-                                {{#if controller.isLoading}}
-                                    <img id="cluster-spinner" class="spinner" src="/admin/ui/images/spinner.gif">
-                                    <h4 class="gui-headline-bold">Loading...</h4>
-                                {{/if}}
-                            {{/if}}
-                        {{/if}}
-                    {{/if}}
+                <div class="item3 action-taken gui-text">
+                    <span class="action-name">Join</span>
                 </div>
-            </section>
-        {{/if}}
+                <div class="item4 replacing-box">
+                    <div class="gui-text field-container inline-block">
+                        <div class="name gui-field">dev1@127.0.0.1</div>
+                    </div>
+                </div>
+                <div class="clear"></div>
+            </div>
+        </section>
+
+
+        <h4 class="plan-details-header gui-headline-bold">Plan Details</h4>
+        <p class="plan-details">
+            More details about the convergence plan will go here.
+            Lorem ipsum dolor sit amet consecteteur adipiscing
+            elit.  Caronius mun liltium norvis.
+        </p>
+        <div class="accept-plan">
+            <div class="gui-checkbox-wrapper">
+                <span>This plan is correct.</span>
+                <input class="gui-checkbox" type="checkbox" name="cluster-plan" value="accept"/>
+            </div>
+            <a id="commit-button" class="gui-point-button-right gui-text-bold right">
+                <span class="gui-button-msg">COMMIT</span>
+            </a>
+        </div>
     </div>
 
     <div class="clear"></div>
