--- a/priv/admin/js/templates/current_cluster_item.hbs
+++ b/priv/admin/js/templates/current_cluster_item.hbs
@@ -14,7 +14,9 @@
             </div>
         </div>
         <div class="item3 gui-text ring-pct-box">
-            <div {{bindAttr class="coloredArrows"}}></div>
+            <div class="left pct-arrows pct-static">
+                <div class="green-pct-arrow"></div>
+            </div>
             <div class="left gui-text pct-box">
                 <span class="ring-pct">{{ring_pct_readable}}%</span>
             </div>
@@ -47,61 +49,33 @@
         <div class="actions-container">
             <div class="actions-pointer"></div>
             <div class="actions-box">
-                <h4 class="gui-headline-bold">
-                    Use these actions to prepare this node to leave the cluster.
-                </h4>
-                {{#if me}}
-                    <span class="warning gui-text-flat italic">
-                        Warning: This node is hosting Riak Control.  If it leaves the
-                        cluster, Riak Control will be shut down.
-                    </span>
-                {{/if}}
+                <span class="gui-text-flat serif">Use these actions to prepare this node to leave the cluster.</span>
                 <div class="replacement-controls">
-                    <div class="gui-radio-wrapper default">
-                        <input class="gui-radio" type="radio" value="leave" {{bindAttr name="name" id="normal_leave_radio"}} checked="checked"/>
-                        <label class="serif" {{bindAttr for="normal_leave_radio"}}>Allow this node to leave normally.</label>
-                    </div>
-                    <div class="gui-radio-wrapper">
-                        <input class="gui-radio" type="radio" value="remove" {{bindAttr name="name" id="force_leave_radio"}} />
-                        <label class="serif" {{bindAttr for="force_leave_radio"}}>Force this node to leave.</label>
-                    </div>
-                    <div {{bindAttr class="replace_radio_classes"}}>
-                        <input class="gui-radio" type="radio" value="replace" {{bindAttr name="name" id="replace_radio"}} />
-                        <label class="serif" {{bindAttr for="replace_radio"}}>Choose a new node to replace this one.</label>
-                    </div>
-                    <div class="extra-actions">
-                        <div class="right-angle-arrow"></div>
-                        {{#if controller.joiningNodesExist}}
-                            <div class="gui-dropdown-wrapper replacement-node-dropdown">
-                                <div class="gui-dropdown-bg gui-text">Select Replacement Node</div>
-                                <div class="gui-dropdown-cap left"></div>
-                                {{view Ember.Select classNames="gui-dropdown" contentBinding="controller.joiningNodes" optionLabelPath="content.name"}}
-                            </div>
-                            <div class="gui-checkbox-wrapper">
-                                <input class="gui-checkbox" type="checkbox" {{bindAttr name="name" id="force_replace_check"}} value="true" />
-                                <label class="serif" {{bindAttr for="force_replace_check"}}>Force this replacement?</label>
-                            </div>
-                            <div class="clear"></div>
-                            <div class="disabler"></div>
-                        {{else}}
-                            <div class="no-joining-nodes gui-text-flat serif italic">
-                                No new nodes are currently staged to join.
-                            </div>
-                            <div class="disabler show slide-up"></div>
-                        {{/if}}
+                    <div class="gui-dropdown-wrapper replacement-node-dropdown">
+                        <div class="gui-dropdown-bg gui-text">Replacement Node</div>
+                        <div class="gui-dropdown-cap left"></div>
+                        <select class="gui-dropdown">
+                            <option value="">All</option>
+                        </select>
                     </div>
                     <div class="clear"></div>
+                    <div class="gui-checkbox-wrapper">
+                        <input class="gui-checkbox" type="checkbox" value="forceleave" />
+                        <span>Force Leave</span>
+                    </div>
+
+                    <div class="gui-checkbox-wrapper">
+                        <input class="gui-checkbox" type="checkbox" value="forcereplace" />
+                        <span>Force Replace</span>
+                    </div>
                 </div>
                 <div class="clear"></div>
-                <span class="gui-text-flat serif italic stage-instructions">Click "STAGE" when you are ready to stage this action.</span>
-                <a class="stage-button gui-point-button-right gui-text-bold right" {{action stageChange target="view"}}>
-                    <span class="gui-button-msg">STAGE</span>
+                <a class="stage-button gui-point-button-right gui-text-bold right">
+                    <span class="gui-button-msg">STAGE LEAVE</span>
                 </a>
-                <div class="clear"></div>
             </div>
             <div class="clear"></div>
         </div><!-- .actions-box -->
         <div class="clear"></div>
     </div><!-- .node -->
-
 {{/with}}
