--- a/priv/admin/js/templates/cluster.hbs
+++ b/priv/admin/js/templates/cluster.hbs
@@ -40,80 +40,21 @@
             <span id="total-number" class="gui-text-flat italic"></span><br/>
         </h2>
         <section id="node-list">
-            <ul class="list-header">
-                <li class="item1"><h4 class="gui-headline-bold">Actions</h4></li>
-                <li class="item2"><h4 class="gui-headline-bold">Name &amp; Status</h4></li>
-                <li class="item3"><h4 class="gui-headline-bold">Partitions</h4></li>
-                <li class="item4"><h4 class="gui-headline-bold">RAM Usage</h4></li>
-            </ul>
-            <div class="clear"></div>
-            <div class="node">
-                <div class="item1 toggle-container">
-                    <div class="actions-toggle gui-field">
-                        <a class="slider"></a>
-                    </div>
+            {{#if controller.isLoading}}
+                <div class="spinner-box">
+                    <img id="cluster-spinner" class="spinner" src="/admin/ui/images/spinner.gif">
                 </div>
-                <div class="item2 name-box gui-text">
-                    <a class="gui-light status-light inline-block">
-                    </a><div class="gui-text field-container inline-block">
-                        <div class="name gui-field">dev1@127.0.0.1</div>
-                    </div>
-                </div>
-                <div class="item3 gui-text ring-pct-box">
-                    <div class="left pct-arrows pct-static">
-                        <div class="green-pct-arrow"></div>
-                    </div>
-                    <div class="left gui-text pct-box">
-                        <span class="ring-pct">25%</span>
-                    </div>
-                    <div class="clear"></div>
-                </div>
-                <div class="item4 gui-text memory-box">
-                    <div class="membar-bg">
-                        <div class="mem-colors">
-                            <div class="erlang-mem mem-color" name=""></div>
-                            <div class="non-erlang-mem mem-color" name=""></div>
-                            <div class="unknown-mem"></div>
-                        </div>
-                        <div class="membar-fg"></div>
-                    </div>
-                    <span class="used-memory">43%</span>
-                </div>
+            {{else}}
+                <ul class="list-header">
+                    <li class="item1"><h4 class="gui-headline-bold">Actions</h4></li>
+                    <li class="item2"><h4 class="gui-headline-bold">Name &amp; Status</h4></li>
+                    <li class="item3"><h4 class="gui-headline-bold">Partitions</h4></li>
+                    <li class="item4"><h4 class="gui-headline-bold">RAM Usage</h4></li>
+                </ul>
                 <div class="clear"></div>
-            </div><!-- .node -->
-            <div class="actions-container">
-                <div class="actions-pointer"></div>
-                <div class="actions-box">
-                    <span class="gui-text-flat serif">Use these actions to prepare this node to leave the cluster.</span>
-                    <div class="replacement-controls">
-                        <div class="gui-dropdown-wrapper replacement-node-dropdown">
-                            <div class="gui-dropdown-bg gui-text">Replacement Node</div>
-                            <div class="gui-dropdown-cap left"></div>
-                            <select class="gui-dropdown">
-                                <option value="">All</option>
-                            </select>
-                        </div>
-                        <div class="clear"></div>
-                        <div class="gui-checkbox-wrapper">
-                            <input class="gui-checkbox" type="checkbox" value="forceleave" />
-                            <span>Force Leave</span>
-                        </div>
-                        
-                        <div class="gui-checkbox-wrapper">
-                            <input class="gui-checkbox" type="checkbox" value="forcereplace" />
-                            <span>Force Replace</span>
-                        </div>
-                    </div>
-                    <div class="clear"></div>
-                    <a class="stage-button gui-point-button-right gui-text-bold right">
-                        <span class="gui-button-msg">STAGE LEAVE</span>
-                    </a>
-                </div>
-            </div><!-- .actions-box -->
+                {{collection RiakControl.CurrentClusterView contentBinding="content.cluster"}}
+            {{/if}}
         </section>
-        <div class="spinner-box">
-            <img id="cluster-spinner" class="spinner" src="/admin/ui/images/spinner.gif">
-        </div>
     </div>
 
 
