--- a/priv/admin/js/templates/staged_cluster_item.hbs
+++ b/priv/admin/js/templates/staged_cluster_item.hbs
@@ -7,17 +7,18 @@
             </div>
         </div>
         <div class="item2 gui-text ring-pct-box">
+            <div class="left pct-arrows pct-static">
+                <div class="green-pct-arrow"></div>
+            </div>
             <div class="left gui-text pct-box">
                 <span class="ring-pct">{{ring_pct_readable}}%</span>
             </div>
             <div class="clear"></div>
         </div>
-        {{#if isAction}}
-          <div class="item3 action-taken gui-text">
-              <span class="action-name">{{node_action}}</span>
-          </div>
-        {{/if}}
-        {{#if isReplaced}}
+        <div class="item3 action-taken gui-text">
+            <span class="action-name">{{action}}</span>
+        </div>
+        {{#if isReplacement}}
             <div class="item4 replacing-box">
                 <div class="gui-text field-container inline-block">
                     <div class="name gui-field">{{replacement}}</div>
