--- a/priv/admin/js/templates/cluster.hbs
+++ b/priv/admin/js/templates/cluster.hbs
@@ -79,7 +79,7 @@
                     <li class="item1"><h4 class="gui-headline-bold">Name &amp; Status</h4></li>
                     <li class="item2"><h4 class="gui-headline-bold">Partitions</h4></li>
                     <li class="item3"><h4 class="gui-headline-bold">Action</h4></li>
-                    <li class="item4"><h4 class="gui-headline-bold">Replacing</h4></li>
+                    <li class="item4"><h4 class="gui-headline-bold">Replacement</h4></li>
                 </ul>
                 <div class="clear"></div>
                 {{collection RiakControl.StagedClusterView contentBinding="content.staged"}}
