added some markup for legacy state

--- a/priv/admin/css/cluster.styl
+++ b/priv/admin/css/cluster.styl
@@ -48,6 +48,7 @@ CSS to be applied ONLY on the cluster page
       display      : inline-block
       padding-top  : 6px
       padding-left : 10px
+      line-height  : 1.2
 
   .actions-container
     css-transition(height .4s ease)
