--- a/priv/admin/js/templates/cluster.hbs
+++ b/priv/admin/js/templates/cluster.hbs
@@ -104,9 +104,13 @@
                     {{#if controller.ring_not_ready}}
                         <h4 class="gui-headline-bold">The plan is currently unavailable because Riak is still starting.</h4>
                     {{else}}
-                        {{#if controller.isLoading}}
-                            <img id="cluster-spinner" class="spinner" src="/admin/ui/images/spinner.gif">
-                            <h4 class="gui-headline-bold">Loading...</h4>
+                        {{#if controller.legacy}}
+                            <h4 class="gui-headline-bold">You are currently running a legacy version of Riak that does not support staged changes.</h4>
+                        {{else}}
+                            {{#if controller.isLoading}}
+                                <img id="cluster-spinner" class="spinner" src="/admin/ui/images/spinner.gif">
+                                <h4 class="gui-headline-bold">Loading...</h4>
+                            {{/if}}
                         {{/if}}
                     {{/if}}
                 </div>
